# job_search

./: .gitignore  README.md  TODO.md  alembic.ini  architecture.drawio  docker-compose.yml  dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_10_04_1801-3129a0e9896b_baseline_existing_schema.py  2025_10_04_2318-d5876421c708_create_users_and_roles_tables.py  2025_11_06_1246-20e8dae6e1a8_add_oauth_support.py
frontend/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: app.vue
frontend/app/components/: BarChart.vue  Cards.vue  Footer.vue  LineChart.vue  Navbar.vue  PieChart.vue  TreeMap.vue
frontend/app/composables/: useAuth.ts  useChartTheme.js  useToast.ts
frontend/app/middleware/: auth.ts
frontend/app/pages/: forgot-password.vue  forgotPassword.vue  index.vue  login.vue  old.vue  (+5 more)
src/: api_services.py  main.py  sample_jobs.jsonl  scraper.py  settings.py  test.py
src/alembic/: env.py
src/api/: api.py  api_services.py  auth_services.py  pydantic_models.py  user_services.py
src/auth/: auth_router.py  auth_services.py  crud.py  deps.py  password_service.py  schemas.py  user_services.py
src/database/: database_service.py  models.py  sql_loader.py
src/embedding/: embedding_service.py  embedding_sql.py
src/insertion/: db_insertion_service.py  insertion_sql.py
src/modules/: database.py  embeddings.py  scraper.py  settings.py  sql_loader.py
src/scrapers/: scraper_router.py  scraper_service.py
src/search/: schemas.py  search_router.py  search_service.py  search_sql.py
tests/: conftest.py
(+24 files in other folders)
