[project]
name = "practice-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "commitizen>=4.8.4",
    "fastapi>=0.116.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scrapy>=2.13.3",
    "sentence-transformers>=5.1.0",
    "uvicorn[standard]>=0.35.0",
]
